--- a/src/templates/column-visibility.html
+++ b/src/templates/column-visibility.html
@@ -1,14 +1,34 @@
 <div class="btn-group">
-    <div class="dropdown">
-        <button class="btn btn-white btn-sm dropdown-toggle" type="button" data-toggle="dropdown">Hide/show columns <span
-                class="caret"></span>
+    <div class="dropwon">
+        <button class="ngtp-dropdown-btn btn  dropdown-toggle"
+                type="button"
+                data-toggle="dropdown">Hide/show columns
+            <span class="caret"></span>
         </button>
 
         <ul class="dropdown-menu">
-            <li data-ng-repeat="column in columns"  data-ng-click="ctrl.onColumnClicked(column);$event.stopPropagation();">
-                <div class="checkbox" >
-                    <label data-ng-if="!column.show()" style="opacity:0.5"><input type="checkbox" value="">{{column.title()}}</label>
-                    <label data-ng-if="column.show()"><input type="checkbox" value="" checked>{{column.title()}}</label>
+            <li data-ng-repeat="column in columns"
+                data-ng-click="ctrl.onColumnClicked(column);$event.stopPropagation();"
+                class="ngtp-noselect">
+
+                <div class="checkbox" data-ng-if="!column.show()">
+                    <label class="ngtp-checkbox-label-disabled">
+                        <input data-ng-if="!column.show()"
+                               type="checkbox"
+                               class="ngtp-checkbox-disabled"
+                               value="">
+                        <span class="ngtp-checkbox-text-disabled">{{column.title()}}</span>
+                    </label>
+                </div>
+                <div class="checkbox" data-ng-if="column.show()">
+                    <label class="ngtp-checkbox-label-enabled">
+                        <input data-ng-if="column.show()"
+                               class="ngtp-checkbox-enabled"
+                               type="checkbox"
+                               value=""
+                               checked>
+                        <span class="ngtp-checkbox-text-enabled">{{column.title()}}</span>
+                    </label>
                 </div>
             </li>
         </ul>
